// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider snapshots > should render the legends row below the track when a mark carries a label 1`] = `
<DocumentFragment>
  <div
    class="_Slider_8f9d96"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="_SliderTrack_5e04e4"
      data-no-drag="true"
      role="slider"
      tabindex="0"
    >
      <div
        class="_SliderTrack__rail_5e04e4"
      >
        <div
          class="_SliderTrack__fill_5e04e4"
          style="width: calc(8px + 0 * (100% - 16px));"
        />
        <div
          class="_SliderTrack__mark_5e04e4"
          style="left: calc(8px + 0.6 * (100% - 16px));"
        />
      </div>
      <div
        class="_SliderTrack__thumb_5e04e4"
        style="left: calc(8px + 0 * (100% - 16px));"
      />
    </div>
    <div
      class="_SliderLegends_7bcef1"
    >
      <span
        class="_SliderLegends__legend_7bcef1"
        style="left: calc(8px + 0.6 * (100% - 16px));"
      >
        iOS
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider snapshots > should render the track positioned from value 1`] = `
<DocumentFragment>
  <div
    class="_Slider_8f9d96"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="_SliderTrack_5e04e4"
      data-no-drag="true"
      role="slider"
      tabindex="0"
    >
      <div
        class="_SliderTrack__rail_5e04e4"
      >
        <div
          class="_SliderTrack__fill_5e04e4"
          style="width: calc(8px + 0.5 * (100% - 16px));"
        />
      </div>
      <div
        class="_SliderTrack__thumb_5e04e4 _SliderTrack__thumb--active_5e04e4"
        style="left: calc(8px + 0.5 * (100% - 16px));"
      />
    </div>
  </div>
</DocumentFragment>
`;
